--- a/app/src/main/res/layout/wordlist_item.xml
+++ b/app/src/main/res/layout/wordlist_item.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="6dp">
+<layout>
+    <data>
 
-    <TextView
-        android:id="@+id/word"
+    </data>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
+        android:orientation="vertical"
+        android:padding="6dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/word"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
+
+    </LinearLayout>
+</layout>
